--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "bootstrap": "5.2.3",
     "burger-menu": "2.0.0",
     "canvasjs": "1.8.3",
     "canvasjs-react-charts": "1.0.5",
     "devextreme": "22.2.3",
     "devextreme-react": "22.2.3",
+    "primereact": "^8.7.3",
+    "react": "^18.2.0",
     "react-bootstrap": "2.7.0",
     "react-burger-menu": "3.0.9",
     "react-chartjs-2": "5.2.0",
     "react-charts-d3": "2.4.1",
     "react-data-grid": "7.0.0-beta.20",
+    "react-dom": "^18.2.0",
     "react-grid-layout": "1.3.4",
     "react-router-dom": "6.6.2",
-    "react-toastify": "9.1.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "9.1.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
