--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-base": "^20.4.44",
+    "@syncfusion/ej2-grids": "^20.4.44",
+    "@syncfusion/ej2-react-base": "^20.4.42",
+    "@syncfusion/ej2-react-grids": "^20.4.44",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,7 +27,7 @@
     "react-grid-layout": "1.3.4",
     "react-router-dom": "6.6.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "9.1.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
