--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@syncfusion/ej2-base": "^20.4.44",
     "@syncfusion/ej2-grids": "^20.4.44",
     "@syncfusion/ej2-react-base": "^20.4.42",
+    "@syncfusion/ej2-react-buttons": "^20.4.44",
     "@syncfusion/ej2-react-grids": "^20.4.44",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
